gitops/manifests/traefik/templates/ingressRoute-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-k0s-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.k0s-fullstack.fredcorp.com`)
      middlewares:
        - name: authentik
          namespace: traefik
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
          namespace: traefik
    - kind: Rule
      match: "Host(`traefik.k0s-fullstack.fredcorp.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
